Listo Category en Swagger
