# src/storage/api-docs/api-docs.json
@@ -4,7 +4,7 @@
         "title": "API Tienda",
         "description": "Esta es la documentación de la API que permite gestionar categorías, productos y ordenes en una tienda.",
         "contact": {
-            "email": "contacto@tudominio.com"
+            "email": "jmcabo93@gmail.com"
         },
         "version": "1.0.0"
     },
@@ -12,7 +12,7 @@
         "/api/login": {
             "post": {
                 "tags": [
-                    "Authentication"
+                    "Autenticación"
                 ],
                 "summary": "Login",
                 "description": "Autenticación de usuario con email y password. Retorna un token Bearer para usar en solicitudes posteriores.",
@@ -80,7 +80,7 @@
         "/api/logout": {
             "post": {
                 "tags": [
-                    "Authentication"
+                    "Autenticación"
                 ],
                 "summary": "Logout",
                 "description": "Cierra sesión y revoca todos los tokens de acceso del usuario autenticado.",
@@ -126,10 +126,229 @@
                 ]
             }
         },
+        "/api/categories": {
+            "get": {
+                "tags": [
+                    "Categorías"
+                ],
+                "summary": "Lista de categorías",
+                "description": "Obtiene una lista paginada de todas las categorías disponibles.",
+                "operationId": "3f5817a34833d0a1f4af4548dd3aeaba",
+                "responses": {
+                    "200": {
+                        "description": "Lista de categorías paginada.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/Category"
+                                            }
+                                        },
+                                        "links": {
+                                            "type": "object",
+                                            "additionalProperties": {
+                                                "type": "string"
+                                            }
+                                        },
+                                        "meta": {
+                                            "type": "object",
+                                            "additionalProperties": {
+                                                "type": "string"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Solicitud incorrecta."
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Categorías"
+                ],
+                "summary": "Crear una nueva categoría",
+                "description": "Crea una nueva categoría proporcionando un nombre y una descripción.",
+                "operationId": "71fcad552bb0eaba9fb191fd8d8dcab0",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/CategoryRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Categoría creada correctamente.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Category"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Datos incorrectos o incompletos."
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/categories/{id}": {
+            "get": {
+                "tags": [
+                    "Categorías"
+                ],
+                "summary": "Mostrar una categoría específica",
+                "description": "Obtiene los detalles de una categoría específica mediante su ID.",
+                "operationId": "c68e76d323c008827a9e47398b1583de",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID de la categoría",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Categoría encontrada.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Category"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Categoría no encontrada."
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "Categorías"
+                ],
+                "summary": "Actualizar una categoría existente",
+                "description": "Actualiza los datos de una categoría existente mediante su ID.",
+                "operationId": "0e686b2748211cc688333ed705dc111f",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID de la categoría",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/CategoryRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Categoría actualizada correctamente.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Category"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Datos incorrectos o incompletos."
+                    },
+                    "404": {
+                        "description": "Categoría no encontrada."
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Categorías"
+                ],
+                "summary": "Eliminar una categoría",
+                "description": "Elimina una categoría específica mediante su ID. Si tiene productos asociados, no se puede eliminar.",
+                "operationId": "4c12e22a7f8c617bd83bfa1fdc05428d",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID de la categoría",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Categoría eliminada correctamente."
+                    },
+                    "400": {
+                        "description": "Categoría no se puede eliminar debido a productos asociados."
+                    },
+                    "404": {
+                        "description": "Categoría no encontrada."
+                    },
+                    "500": {
+                        "description": "Error en el servidor."
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/products": {
             "get": {
                 "tags": [
-                    "Products"
+                    "Productos"
                 ],
                 "summary": "Obtiene una lista de productos",
                 "description": "Devuelve una lista de productos paginados.",
@@ -160,7 +379,7 @@
             },
             "post": {
                 "tags": [
-                    "Products"
+                    "Productos"
                 ],
                 "summary": "Crea un nuevo producto",
                 "description": "Almacena un nuevo producto en la base de datos.",
@@ -234,7 +453,7 @@
         "/api/products/{id}": {
             "get": {
                 "tags": [
-                    "Products"
+                    "Productos"
                 ],
                 "summary": "Obtiene un producto específico",
                 "description": "Devuelve los detalles de un producto por su ID.",
@@ -273,7 +492,7 @@
             },
             "put": {
                 "tags": [
-                    "Products"
+                    "Productos"
                 ],
                 "summary": "Actualiza un producto existente",
                 "description": "Actualiza los datos de un producto por su ID.",
@@ -356,7 +575,7 @@
             },
             "delete": {
                 "tags": [
-                    "Products"
+                    "Productos"
                 ],
                 "summary": "Elimina un producto",
                 "description": "Elimina un producto de la base de datos por su ID.",
@@ -390,7 +609,7 @@
         "/api/products/random": {
             "get": {
                 "tags": [
-                    "Products"
+                    "Productos"
                 ],
                 "summary": "Obtiene un producto aleatorio",
                 "description": "Devuelve un producto aleatorio de la base de datos.",
@@ -420,9 +639,48 @@
     },
     "components": {
         "schemas": {
+            "Category": {
+                "required": [
+                    "name",
+                    "description"
+                ],
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "name": {
+                        "type": "string",
+                        "example": "Electronics"
+                    },
+                    "description": {
+                        "type": "string",
+                        "example": "Devices and gadgets related to electronics"
+                    }
+                },
+                "type": "object"
+            },
+            "CategoryRequest": {
+                "required": [
+                    "name",
+                    "description"
+                ],
+                "properties": {
+                    "name": {
+                        "type": "string",
+                        "example": "Electronics"
+                    },
+                    "description": {
+                        "type": "string",
+                        "example": "Devices and gadgets related to electronics"
+                    }
+                },
+                "type": "object"
+            },
             "Product": {
                 "required": [
                     "name",
+                    "description",
                     "price",
                     "stock",
                     "category_id"
@@ -460,6 +718,50 @@
                     }
                 },
                 "type": "object"
+            },
+            "ProductRequest": {
+                "required": [
+                    "name",
+                    "description",
+                    "price",
+                    "stock",
+                    "category_id"
+                ],
+                "properties": {
+                    "name": {
+                        "description": "Nombre del producto",
+                        "type": "string",
+                        "example": "Smartphone"
+                    },
+                    "description": {
+                        "description": "Descripción del producto",
+                        "type": "string",
+                        "example": "Un teléfono móvil con pantalla de 6.5 pulgadas"
+                    },
+                    "price": {
+                        "description": "Precio del producto",
+                        "type": "number",
+                        "format": "float",
+                        "example": 499.99
+                    },
+                    "stock": {
+                        "description": "Cantidad de stock disponible",
+                        "type": "integer",
+                        "example": 100
+                    },
+                    "category_id": {
+                        "description": "ID de la categoría a la que pertenece el producto",
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "image": {
+                        "description": "Imagen del producto",
+                        "type": "string",
+                        "example": "https://example.com/images/smartphone.jpg",
+                        "nullable": true
+                    }
+                },
+                "type": "object"
             }
         },
         "securitySchemes": {
@@ -473,12 +775,16 @@
     },
     "tags": [
         {
-            "name": "Authentication",
-            "description": "Authentication"
+            "name": "Autenticación",
+            "description": "Autenticación"
         },
         {
-            "name": "Products",
-            "description": "Products"
+            "name": "Categorías",
+            "description": "Categorías"
+        },
+        {
+            "name": "Productos",
+            "description": "Productos"
         }
     ]
 }
